# trigger

./: .env.example  .gitignore  .pylintrc  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
alembic/: env.py
alembic/versions/: 20250322_initial_migration.py
app/: database.py  main.py
app/api/: dependencies.py
app/api/v1/: api.py
app/api/v1/endpoints/: events.py  health.py  triggers.py
app/cdc/: connection.py  listener.py
app/core/: config.py
app/events/: processor.py
app/models/: base.py  trigger.py
app/schemas/: trigger.py
tests/: conftest.py  test_api_health.py  test_api_triggers.py  test_cdc.py
